# liborza

./: .gitignore  CMakeLists.txt
CMake/: FindLilv.cmake  FindSerd.cmake  FindSord.cmake  FindSratom.cmake  FindSuil.cmake
src/: CMakeLists.txt
src/Audio/: CMakeLists.txt  ControlInterface.h  MidiHost.h  Patchbay.h  PatchbayEffects.h  PatchbayPresetLoader.h  PatchbayPresetWriter.h  PluginRepository.h  Server.h
src/Audio/Config/: Config.h.in
src/Config/: Config.h.in
src/Jack/: CMakeLists.txt  Host.cpp  Host.h  Midi.cpp  Midi.h  Patchbay.cpp  Patchbay.h  PatchbayEffects.cpp  PatchbayEffects.h  Server.cpp  Server.h
src/Jack/Events/: BufferEvent.cpp  LatencyEvent.h  UpdateEvent.h
src/LV2/: CMakeLists.txt  Plugin.cpp  Port.h  UI.h
src/Midi/: CMakeLists.txt  Control.h.in  Events.h  Frequency.h  Note.h.in
src/Midi/Config/: Frequency.h.in
src/Network/: CMakeLists.txt  Manager.cpp  Manager.h
src/PluginSearch/: CMakeLists.txt  LoadedPlugins.cpp  LoadedPlugins.h
src/Util/: Dispatcher.h  File.h  Repository.h  Vector.h
test/: CMakeLists.txt
test/Jack/: host_port_register.cpp
